--- a/Consignas_TP2.ipynb
+++ b/Consignas_TP2.ipynb
@@ -24,7 +24,8 @@
     "3) Trabajar con las columnas categóricas del dataset, decidir si corresponde realizar algún reagrupamiento, considerando su frecuencia. \n",
     "   Ayuda: tener en cuenta la presencia de caracteres especiales y/o espacios vacíos en la columna diagnostico.\n",
     "   \n",
-    "   3.1) Para el reagrupamiento de la columna diagnostico, ayudarse de alguna base externa, como por ejemplo https://icdcode.info/espanol/cie-10/codigos.html que contiene la clasificación y agrupación de diagnosticos a nivel internacional. Les dejamos el csv de esta base https://raw.githubusercontent.com/verasativa/CIE-10/master/cie-10.csv. \n",
+    "   3.1) Para el reagrupamiento de la columna diagnostico, ayudarse de la base externa, https://icdcode.info/espanol/cie-10/codigos.html que contiene la clasificación y agrupación de diagnosticos a nivel internacional. Les dejamos el csv de la misma y una breve explicación de como utilizarla https://raw.githubusercontent.com/verasativa/CIE-10/master/cie-10.csv. \n",
+    "   Para la union de esta base externa con el dataframe de licencias, deberan usar el data_key.csv que le adjuntamos en este TP. \n",
     "   \n",
     "4) A partir de la columna fecha_creacion, generar dos columnas extras temporales utilizando las escalas temporales que consideren adecuadas, por ejemplo: día, semana, quincena, mes, trimestre o semestre. Pueden utilizar la función resample de pandas. \n",
     "\n",
@@ -177,6 +178,450 @@
    ],
    "source": [
     "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "217108c1-0510-487d-b63c-52100d7951da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_key = 'https://raw.githubusercontent.com/MentoriaDiploDatos/Exploracion-Y-Curacion/main/data_key.csv'\n",
+    "keys = pd.read_csv(url_key, sep=';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b788d164-d548-4ef2-8d7c-32ca15d02614",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>numero_licencia</th>\n",
+       "      <th>key</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>260267</th>\n",
+       "      <td>279837</td>\n",
+       "      <td>J04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113921</th>\n",
+       "      <td>284651</td>\n",
+       "      <td>M54.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        numero_licencia    key\n",
+       "260267           279837    J04\n",
+       "113921           284651  M54.2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keys.sample(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3706849d-78ab-4aee-b43b-2136a5cd7f55",
+   "metadata": {},
+   "source": [
+    "## Utilizacion de la base CIE.10 de agrupadores de diagnosticos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5d6ff06a-055f-4642-b215-0aed2bcdb836",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cod =pd.read_csv('https://raw.githubusercontent.com/verasativa/CIE-10/master/cie-10.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7088dbe-7bc8-4f1a-a008-1325740335e6",
+   "metadata": {},
+   "source": [
+    "Veamos el diagnostico correspondiente a la key A02, en este caso se corresponde con la descripcion Otras infecciones debidas a Salmonella."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "dd579b6d-43d0-4e59-a876-e9f17155be0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>code_0</th>\n",
+       "      <th>code_1</th>\n",
+       "      <th>code_2</th>\n",
+       "      <th>code_3</th>\n",
+       "      <th>code_4</th>\n",
+       "      <th>description</th>\n",
+       "      <th>level</th>\n",
+       "      <th>source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>375</th>\n",
+       "      <td>A02</td>\n",
+       "      <td>A00-B99</td>\n",
+       "      <td>A00-A09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Otras infecciones debidas a Salmonella</td>\n",
+       "      <td>2</td>\n",
+       "      <td>icdcode.info</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    code   code_0   code_1 code_2 code_3 code_4  \\\n",
+       "375  A02  A00-B99  A00-A09    NaN    NaN    NaN   \n",
+       "\n",
+       "                                description  level        source  \n",
+       "375  Otras infecciones debidas a Salmonella      2  icdcode.info  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cod[df_cod['code'] =='A02']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12f5a9e1-6e28-4eca-8efa-2d61f0361e27",
+   "metadata": {},
+   "source": [
+    "A partir de los grupos y subgrupos que figuran en las columnas code_0, code_1 y siguientes, podemos obtener las descripciones correspondientes. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd03ab7e-0e43-4d46-a509-156ad8eca8db",
+   "metadata": {},
+   "source": [
+    "Observamos que el significado del grupo A00-B99, al que pertenece A02, es Ciertas enfermedades infecciosas y parasitarias (observar que el level es 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b40b4384-b63e-4079-9d20-9c03c291f2bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>code_0</th>\n",
+       "      <th>code_1</th>\n",
+       "      <th>code_2</th>\n",
+       "      <th>code_3</th>\n",
+       "      <th>code_4</th>\n",
+       "      <th>description</th>\n",
+       "      <th>level</th>\n",
+       "      <th>source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A00-B99</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ciertas enfermedades infecciosas y parasitarias</td>\n",
+       "      <td>0</td>\n",
+       "      <td>icdcode.info</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      code code_0 code_1 code_2 code_3 code_4  \\\n",
+       "0  A00-B99    NaN    NaN    NaN    NaN    NaN   \n",
+       "\n",
+       "                                       description  level        source  \n",
+       "0  Ciertas enfermedades infecciosas y parasitarias      0  icdcode.info  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cod[df_cod['code'] == df_cod[df_cod['code'] =='A02']['code_0'].values[0]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bcac90e-09ad-46e8-8294-477aae17b4fa",
+   "metadata": {},
+   "source": [
+    "Tambien podemos obtener el grupo siguiente al que pertenece este diagnostico, de la siguiente manera (observar que el level es 1)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9f1ae18c-2d7f-4afa-9cdd-272a52c9dcf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>code_0</th>\n",
+       "      <th>code_1</th>\n",
+       "      <th>code_2</th>\n",
+       "      <th>code_3</th>\n",
+       "      <th>code_4</th>\n",
+       "      <th>description</th>\n",
+       "      <th>level</th>\n",
+       "      <th>source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>A00-A09</td>\n",
+       "      <td>A00-B99</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Enfermedades infecciosas intestinales</td>\n",
+       "      <td>1</td>\n",
+       "      <td>icdcode.info</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       code   code_0 code_1 code_2 code_3 code_4  \\\n",
+       "64  A00-A09  A00-B99    NaN    NaN    NaN    NaN   \n",
+       "\n",
+       "                              description  level        source  \n",
+       "64  Enfermedades infecciosas intestinales      1  icdcode.info  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cod[df_cod['code'] == df_cod[df_cod['code'] =='A02']['code_1'].values[0]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5e09147-e228-4e9e-ab24-fa4433a2201f",
+   "metadata": {},
+   "source": [
+    "Un ejemplo de como podrian ir incorporando las descripciones de grupos y subgrupos a cada diagnostico individual, es haciendo joins del dataframe con si mismo utilizando como clave los codigos que corresponden. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bab9eba3-3ff6-4144-8e65-8cfb93730384",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_complete_cod = df_cod.merge(df_cod[['code','description']], how='left',left_on='code_0',right_on='code')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4e177b81-da80-420d-b416-4b419e2c8a04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_complete_cod.rename(columns={'code_x':'code', 'description_x':'description','description_y':'description_group_level0'},inplace=True)\n",
+    "df_complete_cod.drop(columns=['code_y'],inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "df67ba43-388d-45cb-a997-69c5f7327160",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>code_0</th>\n",
+       "      <th>code_1</th>\n",
+       "      <th>code_2</th>\n",
+       "      <th>code_3</th>\n",
+       "      <th>code_4</th>\n",
+       "      <th>description</th>\n",
+       "      <th>level</th>\n",
+       "      <th>source</th>\n",
+       "      <th>description_group_level0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>375</th>\n",
+       "      <td>A02</td>\n",
+       "      <td>A00-B99</td>\n",
+       "      <td>A00-A09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Otras infecciones debidas a Salmonella</td>\n",
+       "      <td>2</td>\n",
+       "      <td>icdcode.info</td>\n",
+       "      <td>Ciertas enfermedades infecciosas y parasitarias</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    code   code_0   code_1 code_2 code_3 code_4  \\\n",
+       "375  A02  A00-B99  A00-A09    NaN    NaN    NaN   \n",
+       "\n",
+       "                                description  level        source  \\\n",
+       "375  Otras infecciones debidas a Salmonella      2  icdcode.info   \n",
+       "\n",
+       "                            description_group_level0  \n",
+       "375  Ciertas enfermedades infecciosas y parasitarias  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_complete_cod[df_complete_cod['code'] =='A02']"
    ]
   }
  ],
